--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     <footer>
         <p>© 2025 FlowCash. All rights reserved.</p>
-        <p>Support: <a href="mailto:support@flowcash.com" style="color: #ffcd69;">support@flowcash.com</a></p>
+        <p>Support: <a href="mailto:help.flowcash@gmail.com" style="color: #ffcd69;">help.flowcash@gmail.com</a></p>
     </footer>
 </body>
 </html>
