--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
     <section id="download" class="section">
         <h2 class="fade-up" style="padding-bottom: 16px;">Download FlowCash</h2>
         <h3 class="fade-up" style="padding-bottom: 28px;">Start earning cashback on every purchase today!</h3>
-        <a href="#" class="btn">Get the App</a>
+        <a href="https://play.google.com/store/apps/details?id=com.SujalKhaire.flowcah&pcampaignid=web_share" class="btn" target="_blank">Get the App</a>
+
     </section>
 
     <footer>
