--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="mde6nLic1E2N7gGUvSQ7pasm1TR9HCT_0QZA1HBbnZU" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlowCash - Earn & Save</title>
     <link rel="stylesheet" href="styles.css">
